fixing bugs on smaller device

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -161,7 +161,7 @@
     background-size: cover;
     }
    .title-hero {
-       padding-top: 7rem;
+       padding-top: 4rem;
        text-shadow: 10px 10px #2b2e4a;
        font-size: 7rem;
        text-align: center;
